{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 77,
  "lineage": "08485437-0dc9-508c-aaa2-cd20f6263c15",
  "resources": [
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c4f11b50838ab5d",
            "arn": "arn:aws:ec2:us-east-1:957196010799:instance/i-046cb27befc63936b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-046cb27befc63936b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "aws_ec2_terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0259f4e663c4d7a29",
            "private_dns": "ip-196-128-2-144.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "196.128.2.144",
            "public_ip": "18.208.195.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a19f7cb8c56db6df",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0567af7439f3b6e21",
            "tags": {
              "Name": "ec2_jenkins"
            },
            "tags_all": {
              "Name": "ec2_jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02b0234392b4d4a66",
              "sg-0eccf381171f3a206"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_subnet.aws_public_subnet",
            "module.networking.aws_vpc.aws_vpc_us_east_1",
            "module.security_group.aws_security_group.ec2_sg",
            "module.security_group.aws_security_group.sg_allow_jenkins"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_us_east_1_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957196010799:internet-gateway/igw-000104cc9c9a9c0f6",
            "id": "igw-000104cc9c9a9c0f6",
            "owner_id": "957196010799",
            "tags": {
              "Name": "vpc_us_east_1_igw"
            },
            "tags_all": {
              "Name": "vpc_us_east_1_igw"
            },
            "vpc_id": "vpc-08f4e08650eb8b519"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc_us_east_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_proj_Private_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957196010799:route-table/rtb-071195fec294e0bf4",
            "id": "rtb-071195fec294e0bf4",
            "owner_id": "957196010799",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev_proj_private_RT"
            },
            "tags_all": {
              "Name": "dev_proj_private_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f4e08650eb8b519"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc_us_east_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_proj_public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957196010799:route-table/rtb-0f4182b92dfca7794",
            "id": "rtb-0f4182b92dfca7794",
            "owner_id": "957196010799",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-000104cc9c9a9c0f6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_proj_public_RT"
            },
            "tags_all": {
              "Name": "dev_proj_public_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f4e08650eb8b519"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.vpc_us_east_1_igw",
            "module.networking.aws_vpc.aws_vpc_us_east_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_proj_private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd9f3a1340c0080a",
            "route_table_id": "rtb-071195fec294e0bf4",
            "subnet_id": "subnet-0c42ffc2e41d210b2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.dev_proj_Private_RT",
            "module.networking.aws_subnet.aws_private_subnet",
            "module.networking.aws_vpc.aws_vpc_us_east_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c2fa523bdf38680",
            "route_table_id": "rtb-071195fec294e0bf4",
            "subnet_id": "subnet-05713efafcc0d913e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.dev_proj_Private_RT",
            "module.networking.aws_subnet.aws_private_subnet",
            "module.networking.aws_vpc.aws_vpc_us_east_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_proj_public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0593eea7137db6556",
            "route_table_id": "rtb-0f4182b92dfca7794",
            "subnet_id": "subnet-0567af7439f3b6e21"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.vpc_us_east_1_igw",
            "module.networking.aws_route_table.dev_proj_public_RT",
            "module.networking.aws_subnet.aws_public_subnet",
            "module.networking.aws_vpc.aws_vpc_us_east_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0849bca83a4dd6813",
            "route_table_id": "rtb-0f4182b92dfca7794",
            "subnet_id": "subnet-0a011f459b0f4609f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.vpc_us_east_1_igw",
            "module.networking.aws_route_table.dev_proj_public_RT",
            "module.networking.aws_subnet.aws_public_subnet",
            "module.networking.aws_vpc.aws_vpc_us_east_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957196010799:subnet/subnet-0c42ffc2e41d210b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "196.128.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c42ffc2e41d210b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "957196010799",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_project_private_subnet-1"
            },
            "tags_all": {
              "Name": "dev_project_private_subnet-1"
            },
            "vpc_id": "vpc-08f4e08650eb8b519"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc_us_east_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957196010799:subnet/subnet-05713efafcc0d913e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "196.128.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05713efafcc0d913e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "957196010799",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_project_private_subnet-2"
            },
            "tags_all": {
              "Name": "dev_project_private_subnet-2"
            },
            "vpc_id": "vpc-08f4e08650eb8b519"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc_us_east_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957196010799:subnet/subnet-0567af7439f3b6e21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "196.128.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0567af7439f3b6e21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "957196010799",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_project_public_subnet-1"
            },
            "tags_all": {
              "Name": "dev_project_public_subnet-1"
            },
            "vpc_id": "vpc-08f4e08650eb8b519"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc_us_east_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957196010799:subnet/subnet-0a011f459b0f4609f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "196.128.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a011f459b0f4609f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "957196010799",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_project_public_subnet-2"
            },
            "tags_all": {
              "Name": "dev_project_public_subnet-2"
            },
            "vpc_id": "vpc-08f4e08650eb8b519"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc_us_east_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws_vpc_us_east_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957196010799:vpc/vpc-08f4e08650eb8b519",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "196.128.0.0/16",
            "default_network_acl_id": "acl-05e1b047879cd39a8",
            "default_route_table_id": "rtb-0e8745c82bf251c1e",
            "default_security_group_id": "sg-0251b1a9e0fbb0953",
            "dhcp_options_id": "dopt-0baebb9efecb01a0e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08f4e08650eb8b519",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e8745c82bf251c1e",
            "owner_id": "957196010799",
            "tags": {
              "Name": "vpc_gh"
            },
            "tags_all": {
              "Name": "vpc_gh"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957196010799:security-group/sg-02b0234392b4d4a66",
            "description": "Allow SSH, HTTP and HTTPs from outside",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b0234392b4d4a66",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HHTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPs from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow remote SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allow http, https, SSH",
            "name_prefix": "",
            "owner_id": "957196010799",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev_proj_ec2_sg_ssh_http"
            },
            "tags_all": {
              "Name": "dev_proj_ec2_sg_ssh_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f4e08650eb8b519"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc_us_east_1"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_allow_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957196010799:security-group/sg-0eccf381171f3a206",
            "description": "Allow port 8080 for Jenkins",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eccf381171f3a206",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 8080 for Jenkins from anywhere",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Allow port 8080 for Jenkins",
            "name_prefix": "",
            "owner_id": "957196010799",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow port 8080 to access Jenkins on EC2"
            },
            "tags_all": {
              "Name": "Allow port 8080 to access Jenkins on EC2"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f4e08650eb8b519"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc_us_east_1"
          ]
        }
      ]
    }
  ]
}